--- a/vignettes/Install.Rmd
+++ b/vignettes/Install.Rmd
@@ -2,10 +2,13 @@
 title: "Install"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Linkage}
+  %\VignetteIndexEntry{Install}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
+
+![](../man/figures/shiny-logo1.png)
+
 
 ``` r
 if (!requireNamespace("devtools", quietly = TRUE))
