--- a/vignettes/Enrichment.Rmd
+++ b/vignettes/Enrichment.Rmd
@@ -12,28 +12,37 @@ Pathway Enrichment Module supports users to visualize tabular and graphical path
 
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE}
 library(Linkage)
-extdatadir <- system.file("extdata", "Senescence-associated secretory phenotype.txt", package = "Linkage")
-gene_list <- read.table(extdatadir)
-go <- GO.enrichment(gene_list = gene_list$V1, Species = "Homo", genelist_idtype = "external_gene_name")
-KEGG <- KEGG.enrichment(gene_list = gene_list$V1, Species = "Homo", genelist_idtype = "external_gene_name")
+library(LinkageData)
+Geneset <- system.file("extdata", "SASPGeneSet.rdata", package = "LinkageData")
+load(Geneset)
+go <-
+  GOEnrichment(gene_list = SASPGeneSet,
+               Species = "Homo",
+               genelist_idtype = "external_gene_name")
+KEGG <-
+  KEGGEnrichment(
+    gene_list = SASPGeneSet,
+    Species = "Homo",
+    genelist_idtype = "external_gene_name"
+  )
 ```
 
 ```{r fig.height=7, fig.width=7, message=FALSE, warning=FALSE}
-dotplot(go)
+EnrichDotPlot(go)
 ```
 
 ```{r fig.height=7, fig.width=7, message=FALSE, warning=FALSE}
-barplot(go)
+EnrichBarPlot(go)
 ```
 
 ```{r fig.height=7, fig.width=7, message=FALSE, warning=FALSE}
-upsetplot(go)
+EnrichUpsetPlot(go)
 ```
 
 ```{r fig.height=7, fig.width=7, message=FALSE, warning=FALSE}
-cnetplot(go)
+EnrichCnetPlot(go)
 ```
 
 ```{r fig.height=5, fig.width=7, message=FALSE, warning=FALSE}
-wordcloud(go, Type = "GO")
+EnrichWordCloud(go, Type = "GO")
 ```
