--- a/vignettes/LinkageR.Rmd
+++ b/vignettes/LinkageR.Rmd
@@ -15,14 +15,16 @@ The chromatin accessibility data is a normalized bulk ATAC-seq count matrix, whi
 
 ```{r message=FALSE, warning=FALSE}
 library(Linkage)
-RNA.seq.dir <- system.file("extdata", "TCGA-BRCA-RNA.txt", package = "Linkage")
-RNA.seq <- data.table::fread(RNA.seq.dir, header = TRUE)
-Homo.list.files.dir <- system.file("extdata", "Homo.ATAC", package = "Linkage")
-Homo.list.files <- list.files(Homo.list.files.dir)
-Homo.list.files <- paste0(Homo.list.files.dir, "/", Homo.list.files)
-Homo.df_list <- lapply(Homo.list.files, function(file) data.table::fread(file, header = TRUE))
-ATAC.seq <- do.call(rbind, Homo.df_list)
-LinkageObject <- CreateLinkageObject(ATAC_count = ATAC.seq, RNA_count = RNA.seq, Species = "Homo", id_type = "ensembl_gene_id")
+library(LinkageData)
+ATAC.seq <- BreastCancerATAC()
+RNA.seq <- BreastCancerRNA()
+LinkageObject <-
+  CreateLinkageObject(
+    ATAC_count = ATAC.seq,
+    RNA_count = RNA.seq,
+    Species = "Homo",
+    id_type = "ensembl_gene_id"
+  )
 LinkageObject
 ```
 
@@ -34,8 +36,13 @@ LinkageObject
 
 ```{r fig.height=5, fig.width=7, message=FALSE, warning=FALSE}
 gene_list <- c("TSPAN6", "CD99", "KLHL13")
-LinkageObject <- regulatory_peak(LinkageObject = LinkageObject, gene_list = gene_list, genelist_idtype = "external_gene_name")
-Corrplot(LinkageObject, gene = "TSPAN6")
+LinkageObject <-
+  RegulatoryPeak(
+    LinkageObject = LinkageObject,
+    gene_list = gene_list,
+    genelist_idtype = "external_gene_name"
+  )
+CorrPlot(LinkageObject, gene = "TSPAN6")
 ```
 
 ### **3.Regulatory Peaks Visualization**
@@ -45,7 +52,12 @@ Corrplot(LinkageObject, gene = "TSPAN6")
 :::
 
 ```{r fig.height=5, fig.width=7, message=TRUE, warning=TRUE}
-Trackplot(LinkageObject, Geneid = "TSPAN6", peakid = "chrX:100635908-100636408", Species = "Homo")
+TrackPlot(
+  LinkageObject,
+  Geneid = "TSPAN6",
+  peakid = "chrX:100635908-100636408",
+  Species = "Homo"
+)
 ```
 
 ### **4.Regulatory Peaks Annotation**
@@ -55,8 +67,8 @@ Trackplot(LinkageObject, Geneid = "TSPAN6", peakid = "chrX:100635908-100636408",
 :::
 
 ```{r echo=TRUE, fig.height=5, fig.width=7, message=FALSE, warning=FALSE}
-LinkageObject <- Peak_Annottation(LinkageObject, Species = "Homo")
-upsetplot.csAnno(LinkageObject = LinkageObject)
+LinkageObject <- PeakAnnottation(LinkageObject, Species = "Homo")
+AnnoUpsetPlot(LinkageObject = LinkageObject)
 ```
 
 ### **5.Regulatory Network**
@@ -66,7 +78,16 @@ upsetplot.csAnno(LinkageObject = LinkageObject)
 :::
 
 ```{r fig.height=5, fig.width=7, message=FALSE, warning=FALSE}
-LinkageObject <- MultipleMotifAnalysis(LinkageObject = LinkageObject, Species = "Homo", TF_cor_method = "pearson")
-LinkageObject <- CreateNetworkObject(LinkageObject = LinkageObject, genelist_idtype = "external_gene_name", filter_col = "FDR", filter_value = 0.01)
+LinkageObject <-
+  MultipleMotifAnalysis(LinkageObject = LinkageObject,
+                        Species = "Homo",
+                        TF_cor_method = "pearson")
+LinkageObject <-
+  CreateNetworkObject(
+    LinkageObject = LinkageObject,
+    genelist_idtype = "entrezgene_id",
+    filter_col = "FDR",
+    filter_value = 0.01
+  )
 BuildNetwork(LinkageObject)
 ```
