--- a/vignettes/Enrichment.Rmd
+++ b/vignettes/Enrichment.Rmd
@@ -11,7 +11,7 @@ Pathway Enrichment Module
 Pathway Enrichment Module supports users to visualize tabular and graphical pathway enrichment results of interested gene lists, which can be produced from previous analysis of Linkage. The enrichment analysis can link these gene lists with underlying molecular pathways and functional categories such as gene ontology (GO) and Kyoto Encyclopedia of Genes and Genomes (KEGG).
 
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE}
-library(Linkage)
+library(linkage)
 library(LinkageData)
 Geneset <- system.file("extdata", "SASPGeneSet.rdata", package = "LinkageData")
 load(Geneset)
