--- a/vignettes/TCGA-BRCA-guided-tutorial.Rmd
+++ b/vignettes/TCGA-BRCA-guided-tutorial.Rmd
@@ -44,25 +44,25 @@ We start by loading in the data. The BreastCancerATAC() and BreastCancerRNA()
 We next use the chromatin accessibility and gene expression matrix to create a Linkage object. The object serves as a container that contains both data (like the count matrix) and analysis (like regulatory peaks, or active TFBS).
 
 ```{r message=FALSE, warning=FALSE}
-library(linkage)
-library(LinkageData)
-ATAC.seq <- BreastCancerATAC()
-RNA.seq <- BreastCancerRNA()
+library(LinkageR)
+# library(LinkageData)
+# ATAC_count <- BreastCancerATAC()
+# RNA_count <- BreastCancerRNA()
 LinkageObject <-
   CreateLinkageObject(
-    ATAC_count = ATAC.seq,
-    RNA_count = RNA.seq,
+    ATAC_count = Small_ATAC,
+    RNA_count = Small_RNA,
     Species = "Homo",
     id_type = "ensembl_gene_id"
   )
 LinkageObject
 ```
 
-### 2. Regulatory Peaks Search
+### 2.Regulatory Peaks Search
 
-Linkage allows you to search all potential regulatory peaks of given genes within a specified region.
+Linkage allows you to search all potential regulatory peaks of given genes within a specified region.
 
-In the example below, we detect the potential regulatory peaks of three different genes ("TSPAN6", "CD99", "KLHL13") within a range of 500000 bp around them. Then we plot the top 6 significant results (sort by FDR).
+In the example below, we detect the potential regulatory peaks of three different genes ("TSPAN6", "CD99", "KLHL13") within a range of 500000 bp around them. Then we plot the top 6 significant results (sort by FDR).
 
 ```{r fig.height=5, fig.width=7, message=FALSE, warning=FALSE}
 gene_list <- c("TSPAN6", "CD99", "KLHL13")
@@ -70,12 +70,12 @@ LinkageObject <-
   RegulatoryPeak(
     LinkageObject = LinkageObject,
     gene_list = gene_list,
-    genelist_idtype = "external_gene_name"
+    genelist_idtype = "external_gene_name",
   )
-CorrPlot(LinkageObject, gene = "TSPAN6")
+CorrPlot(LinkageObject, gene = "CD99")
 ```
 
-### 3. Regulatory Peaks and Target Gene Visualization
+### 3.Regulatory Peaks Visualization
 
 Now we can plot the Tn5 integration frequency and gene expression level across regions of the genome using the `TrackPlot()` function. For easier visualization, Linkage categorizes samples into five groups based on the quantitative chromatin accessibility of the specific regulatory peak from low to high. For each group, pseudo-bulk accessibility tracks and expression boxplot of the target gene can be viewed. Alongside these accessibility tracks we can visualize other important information including gene annotation and peak coordinates.
 
